--- a/app/assets/sass/components/transaction-filter.scss
+++ b/app/assets/sass/components/transaction-filter.scss
@@ -67,7 +67,7 @@
 
 .clear-filter {
   position: relative;
-  top: 10px;
+  top: 12px;
 }
 
 // bootstrap datepicker overides
